--- a/www/index.html
+++ b/www/index.html
@@ -21,11 +21,11 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="lmTodo">
 
     <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
+      <ion-header-bar class="bar-calm">
+        <h1 class="title">lmTodo</h1>
       </ion-header-bar>
       <ion-content>
       </ion-content>
