testing; created a file with mocking data. created a fakeTodo

--- a/www/SpecsRunner.html
+++ b/www/SpecsRunner.html
@@ -14,6 +14,7 @@
     
     <!-- specs -->
     <script type="text/javascript" src="specs/home.specs.js"></script>
+    <script type="text/javascript" src="specs/mockingData.js"></script>
     
 <body>
 </body>
