--- a/www/js/app/menu/menu.template.html
+++ b/www/js/app/menu/menu.template.html
@@ -7,13 +7,13 @@
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
-      </ion-nav-buttons>
+      </ion-nav-buttons>      
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-calm">
+    <ion-header-bar class="bar-stable">
       <h1 class="title"></h1>
     </ion-header-bar>
     <ion-content>
