testing; added the ng storage to the SpecsRunner and karma.conf
- added karma-coverage to keep track of the code coverage.

--- a/www/SpecsRunner.html
+++ b/www/SpecsRunner.html
@@ -10,6 +10,7 @@
     <!-- angular code -->    
     <script type="text/javascript" src="lib/ionic/js/ionic.bundle.js"></script>
     <script type="text/javascript" src="lib/angular-mocks/angular-mocks.js"></script>
+    <script type="text/javascript" src="lib/ngstorage/ngStorage.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     
     <!-- specs -->
