ui; capitalized the items in the side menu of the app

--- a/www/js/app/menu/menu.template.html
+++ b/www/js/app/menu/menu.template.html
@@ -19,10 +19,10 @@
     <ion-content>
       <ion-list>
         <ion-item menu-close href="#/app/home">
-          home
+          Home
         </ion-item>
         <ion-item menu-close href="#/app/settings">
-          settings
+          Settings
         </ion-item>
       </ion-list>
     </ion-content>
