--- a/www/js/app/menu/menu.template.html
+++ b/www/js/app/menu/menu.template.html
@@ -13,11 +13,11 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
+    <ion-header-bar class="bar-dark">
       <h1 class="title"></h1>
     </ion-header-bar>
-    <ion-content>
-      <ion-list>
+    <ion-content class="dark">
+      <ion-list class="list">
         <ion-item menu-close href="#/app/home">
           Home
         </ion-item>
