testing; updated and created specs for the new code.

--- a/www/SpecsRunner.html
+++ b/www/SpecsRunner.html
@@ -15,6 +15,10 @@
     
     <!-- specs -->
     <script type="text/javascript" src="specs/home.specs.js"></script>
+    <script type="text/javascript" src="specs/todo.specs.js"></script>
+    <script type="text/javascript" src="specs/todo.service.specs.js"></script>
+    <script type="text/javascript" src="specs/utilities.service.specs.js"></script>
+    <script type="text/javascript" src="specs/storage.service.specs.js"></script>
     <script type="text/javascript" src="specs/mockingData.js"></script>
     
 <body>
