--- a/www/SpecsRunner.html
+++ b/www/SpecsRunner.html
@@ -11,7 +11,13 @@
     <script type="text/javascript" src="lib/ionic/js/ionic.bundle.js"></script>
     <script type="text/javascript" src="lib/angular-mocks/angular-mocks.js"></script>
     <script type="text/javascript" src="lib/ngstorage/ngStorage.js"></script>
+    <script type="text/javascript" src="lib/firebase/firebase.js"></script>
+    <script type="text/javascript" src="lib/angularfire/dist/angularfire.min.js"></script>
+    
+    <!-- app -->
     <script type="text/javascript" src="js/app.js"></script>
+    <!--<script type="text/javascript" src="js/app/config.js"></script>--> <!-- issue -->
+    <!--<script type="text/javascript" src="js/app/home/home.controller.js"></script>-->
     
     <!-- specs -->
     <script type="text/javascript" src="specs/home.specs.js"></script>
