renamed deleteTodo to removeTodo to maintain consistency with the other services/functions

--- a/www/js/app/todo/todo.template.html
+++ b/www/js/app/todo/todo.template.html
@@ -15,7 +15,7 @@
       </button>
     </div>
     <div class="row">
-        <button class="button button-assertive button-block" ng-click="todo.deleteTodo()" ng-show="todo.canRemove">
+        <button class="button button-assertive button-block" ng-click="todo.removeTodo()" ng-show="todo.canRemove">
         Remove
       </button>
     </div>
