--- a/www/SpecsRunner.html
+++ b/www/SpecsRunner.html
@@ -22,6 +22,7 @@
     <!-- specs -->
     <script type="text/javascript" src="specs/home.specs.js"></script>
     <script type="text/javascript" src="specs/todo.specs.js"></script>
+    <script type="text/javascript" src="specs/settings.specs.js"></script>
     <script type="text/javascript" src="specs/todo.service.specs.js"></script>
     <script type="text/javascript" src="specs/utilities.service.specs.js"></script>
     <script type="text/javascript" src="specs/storage.service.specs.js"></script>
